--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 		<script>
 			var canvas = document.getElementById("canvas");
 			game_speed = 180;
-			width = $(window).width();
-			height = $(window).height();
-			init( game_speed, "mylegend", width, height, main);
+			global_width = $(window).width();
+			global_height = $(window).height();
+			init( game_speed, "mylegend", global_width, global_height, main);
 		</script>
 	</body>
 </html>
