--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<title>答题游戏</title>
 		<link rel="stylesheet" href = "css/index.css">
 		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/lufylegend-1.7.6.js"></script>
+		<script src="js/lufylegend-1.9.9.min.js"></script>
 		<script src="js/canvas.js"></script>
 	</head>
 	<body>
