--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 		<script src="js/canvas.js"></script>
 	</head>
 	<body>
-		<div id = "mylegend">loading...</div><br>
+		<div id = "mylegend">
+			你他妈在用20年前的浏览器！！！
+		</div><br>
 		<script>
 			var canvas = document.getElementById("canvas");
 			game_speed = 180;
