--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<script src="js/lufylegend-1.9.9.min.js"></script>
 		<script src="js/puzzle.js"></script>
 		<script src="js/canvas.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	</head>
 	<body>
 		<div id = "mylegend">
