--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 			game_speed = 10;
 			global_width = $(window).width();
 			global_height = $(window).height();
+			alert( "w:"+global_width+"\nh:"+global_height);
 			init( game_speed, "mylegend", global_width, global_height, main);
 		</script>
 	</body>
